fix mini counter buttons being off-center

--- a/src/components/MiniCounter.scss
+++ b/src/components/MiniCounter.scss
@@ -43,6 +43,7 @@
     background: none;
     padding: 0 12px;
 
+    display: flex;
     flex-shrink: 0;
 
     ion-icon {
